// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper should render 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-r7rrb4-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
          ";font-size:",
          "14px",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-r7rrb4-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`Wrapper should render different label positions 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-r7rrb4-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
          ";font-size:",
          "14px",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-r7rrb4-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="left"
/>
`;

exports[`Wrapper should render different label positions 2`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-r7rrb4-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
          ";font-size:",
          "14px",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-r7rrb4-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="right"
/>
`;

exports[`Wrapper should render different label positions 3`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-r7rrb4-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
          ";font-size:",
          "14px",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-r7rrb4-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="top"
/>
`;

exports[`Wrapper should render different label positions 4`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper-r7rrb4-0",
        "isStatic": false,
        "rules": Array [
          [Function],
          ";font-family:",
          "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
          ";font-size:",
          "14px",
          ";display:flex;width:fit-content;align-items:center;",
        ],
      },
      "displayName": "Wrapper",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Wrapper-r7rrb4-0",
      "target": "label",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  labelPosition="bottom"
/>
`;
